--- a/static/css/commodities.css
+++ b/static/css/commodities.css
@@ -195,7 +195,7 @@ body {
         margin-top: 20px;
         display: grid;
         gap: 16px;
-        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(145px, 1fr));
     }
     #btn{
         margin-top: 2rem;
@@ -216,10 +216,10 @@ body {
         margin-top: auto;
         margin-right: 23px;
         margin-left: 23px;
-        padding: 8px 15px;
+        padding: 1px 1px;
         color: #ffffff;
         background: #008000;
-        border-radius: 5px;
+        border-radius: 1px;
         display: inline-block;
         text-decoration: none;
         font-weight: 600;
@@ -228,6 +228,9 @@ body {
         padding: 30px 0 2px 0;
         font-size: 14px;
         font-weight: 600;
+    }
+    .box p{
+       display: none;
     }
     h3{
         display: none;
