--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -114,6 +114,7 @@ body {
     padding: 5px 0;
     font-size: 23px;
     font-weight: 700;
+    /* word-break: break-all; */
 }
 
 /* .box h2 a:hover{
@@ -215,6 +216,12 @@ body {
     color: #de5e57;     
 }
 
+@media (max-width: 990px) {
+    .box h2 a{
+        font-size: 15px;
+        word-break: break-all;
+    }
+}
 
 @media (max-width: 500px) {
     #head tr .title{
@@ -247,7 +254,7 @@ body {
         width: 88%;
         margin-left: auto; 
         margin-right: auto;
-        font-size: 14px;
+        font-size: 12px;
         font-family: Arial, Helvetica, sans-serif;
     }
     #tables #table_dashboard{
