--- a/static/css/iec.css
+++ b/static/css/iec.css
@@ -159,6 +159,13 @@ body {
     #tbl tbody tr td a i{
         font-size: 13px;
     }
+    #tbl tbody tr td .btn{
+        text-decoration: none;
+        color: #ffffff;
+        word-spacing: 100px;
+        padding: 1px 3px;
+        font-size: 13px;
+    }
     #tbl thead tr th:nth-child(3){
         display: none;
     }
@@ -171,10 +178,12 @@ body {
     #tbl tbody tr td:nth-child(4){
         display: none;
     }
-    #tbl thead tr th:nth-child(5){
+    #tbl thead tr th:nth-child(2){
         display: none;
     }
-    #tbl tbody tr td:nth-child(5){
+    #tbl tbody tr td:nth-child(2){
         display: none;
     }
+    #tbl th:nth-of-type(1) {width:50%;}
+    #tbl th:nth-of-type(5) {width:50%;}
 }
