--- a/static/css/secretariat.css
+++ b/static/css/secretariat.css
@@ -204,7 +204,7 @@ h2{
         margin-top: 20px;
         display: grid;
         gap: 16px;
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     }
     #btn{
         margin-top: 2rem;
@@ -225,10 +225,10 @@ h2{
         margin-top: auto;
         margin-right: 23px;
         margin-left: 23px;
-        padding: 8px 15px;
+        padding: 1px 1px;
         color: #ffffff;
         background: #008000;
-        border-radius: 5px;
+        border-radius: 1px;
         display: inline-block;
         text-decoration: none;
         font-weight: 600;
