--- a/team/templates/team/pdf_page.html
+++ b/team/templates/team/pdf_page.html
@@ -74,7 +74,7 @@
         {% for team in team_filter.qs %}
         <tbody>
           <tr>
-            <td>{{team.lname}}, {{team.fname}}</th>
+            <td>{{team.fname}} {{team.lname}}</th>
             <td>{{team.position}}</th>
             <td>{{team.teams}}</th>
 
