--- a/secretariat/templates/secretariat/index.html
+++ b/secretariat/templates/secretariat/index.html
@@ -44,8 +44,8 @@
 				{% else %}
 				<img class="img_team" src="{% static 'images/default.jpg' %}" alt="profile">
 				{% endif %}
-				<h2>{{secretariat.fname}} {{secretariat.mname}} {{secretariat.lname}}</h2>
-				<h3>Position: {{secretariat.position}}</h3>
+				<h2>{{secretariat.fname}} {{secretariat.mname|default_if_none:""}} {{secretariat.lname}}</h2>
+				<h3>{{secretariat.position}}</h3>
 				<a href="{% url 'secretariat:details' secretariat.secretariat_id %}" class="btn">VIEW</a>
 			  </div>
 			  {% endfor %}
