--- a/secretariat/templates/secretariat/pdf_page.html
+++ b/secretariat/templates/secretariat/pdf_page.html
@@ -66,7 +66,7 @@
         {% for secretariat in secretariat_filter.qs %}
         <tbody>
           <tr>
-            <td>{{secretariat.lname}}, {{secretariat.fname}}</th>
+            <td>{{secretariat.fname}} {{secretariat.lname}}</th>
             <td>{{secretariat.position}}</th>
             <td>{{secretariat.specialization}}</th>
 
