--- a/static/css/pdf_page_cmi.css
+++ b/static/css/pdf_page_cmi.css
@@ -215,10 +215,18 @@ body {
     #tbl tbody tr td a{
         font-size: 13px;
     }
-    #tbl thead tr th:nth-child(2){
-        display: none;
+    #tbl tbody tr td{
+        font-size: 13px;
     }
-    #tbl tbody tr th:nth-child(2){
-        display: none;
+    #tbl tbody tr td .btn{
+        text-decoration: none;
+        color: #ffffff;
+        word-spacing: 100px;
+        padding: 1px 3px;
+        font-size: 13px;
+        border-radius: 2px;
+        font-size: 12px;
     }
+    #tbl th:nth-of-type(1) {width:75%;}
+    #tbl th:nth-of-type(2) {width:25%;}
 }
