--- a/static/css/pdf_page_proj.css
+++ b/static/css/pdf_page_proj.css
@@ -219,16 +219,30 @@ body {
     #tbl tbody tr td a{
         font-size: 13px;
     }
+    #tbl tbody tr td{
+        font-size: 12px;
+    }
+    #tbl tbody tr td .btn{
+        text-decoration: none;
+        color: #ffffff;
+        word-spacing: 100px;
+        padding: 1px 3px;
+        font-size: 13px;
+        border-radius: 2px;
+        font-size: 12px;
+    }
     #tbl thead tr th:nth-child(2){
         display: none;
     }
     #tbl thead tr th:nth-child(3){
         display: none;
     }
-    #tbl tbody tr th:nth-child(2){
+    #tbl tbody tr td:nth-child(2){
         display: none;
     }
-    #tbl tbody tr th:nth-child(3){
+    #tbl tbody tr td:nth-child(3){
         display: none;
     }
+    #tbl th:nth-of-type(1) {width:75%;}
+    #tbl th:nth-of-type(4) {width:25%;}
 }
