--- a/static/css/pdf_page_team.css
+++ b/static/css/pdf_page_team.css
@@ -217,22 +217,30 @@ body {
     #tbl tbody tr td a{
         font-size: 13px;
     }
+    #tbl tbody tr td{
+        font-size: 14px;
+    }
+    #tbl tbody tr td .btn{
+        text-decoration: none;
+        color: #ffffff;
+        word-spacing: 100px;
+        padding: 1px 3px;
+        font-size: 13px;
+        border-radius: 2px;
+        font-size: 12px;
+    }
     #tbl thead tr th:nth-child(2){
         display: none;
     }
     #tbl thead tr th:nth-child(3){
         display: none;
     }
-    #tbl thead tr th:nth-child(4){
+    #tbl tbody tr td:nth-child(2){
         display: none;
     }
-    #tbl tbody tr th:nth-child(2){
+    #tbl tbody tr td:nth-child(3){
         display: none;
     }
-    #tbl tbody tr th:nth-child(3){
-        display: none;
-    }
-    #tbl tbody tr th:nth-child(4){
-        display: none;
-    }
+    #tbl th:nth-of-type(1) {width:70%;}
+    #tbl th:nth-of-type(4) {width:30%;}
 }
