--- a/static/css/prioarea.css
+++ b/static/css/prioarea.css
@@ -153,4 +153,13 @@ body {
     #tbl tbody tr td a i{
         font-size: 13px;
     }
+    #tbl tbody tr td .btn{
+        text-decoration: none;
+        color: #ffffff;
+        word-spacing: 100px;
+        padding: 1px 3px;
+        font-size: 13px;
+    }
+    #tbl th:nth-of-type(1) {width:50%;}
+    #tbl th:nth-of-type(2) {width:50%;}
 }
