--- a/static/css/projimp.css
+++ b/static/css/projimp.css
@@ -155,6 +155,13 @@ body {
     #tbl tbody tr td a i{
         font-size: 13px;
     }
+    #tbl tbody tr td .btn{
+        text-decoration: none;
+        color: #ffffff;
+        word-spacing: 100px;
+        padding: 1px 3px;
+        font-size: 13px;
+    }
     #tbl thead tr th:nth-child(2){
         display: none;
     }
@@ -167,16 +174,6 @@ body {
     #tbl tbody tr td:nth-child(3){
         display: none;
     }
-    #tbl thead tr th:nth-child(4){
-        display: none;
-    }
-    #tbl tbody tr td:nth-child(4){
-        display: none;
-    }
-    #tbl thead tr th:nth-child(5){
-        display: none;
-    }
-    #tbl tbody tr td:nth-child(5){
-        display: none;
-    }
+    #tbl th:nth-of-type(1) {width:50%;}
+    #tbl th:nth-of-type(4) {width:50%;}
 }
