--- a/static/css/secretariat.css
+++ b/static/css/secretariat.css
@@ -108,12 +108,12 @@ h2{
     margin-top: 20px;
     display: grid;
     gap: 18px;
-    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(190px, 1fr));
 }
 
 .img_team{
     width: 100%; 
-    height:240px; 
+    height:188px; 
     display:block;
     margin-left: auto;
     margin-right: auto;
@@ -132,8 +132,8 @@ h2{
 .box h2{
     font-family: Arial, Helvetica, sans-serif;
     color: #008000;
-    padding: 5px 0;
-    font-size: 20px;
+    padding: 5px 3px;
+    font-size: 16px;
     font-weight: 700;
 }
 
