--- a/static/css/commodities.css
+++ b/static/css/commodities.css
@@ -175,6 +175,33 @@ body {
     box-shadow: 0 10px 15px rgba(15, 81, 9, 0.272);
 }
 
+@media (max-width: 800px) {
+    #head tr .title{
+        padding-left: 10px;
+        width: 74%;
+        font-weight: 600;
+        color: white;
+        font-size: 22px;
+        background-color:transparent;
+        cursor: pointer;
+    }
+    .container{
+        margin-top: 20px;
+        display: grid;
+        gap: 16px;
+        grid-template-columns: repeat(auto-fill, minmax(145px, 1fr));
+    }
+    .img_com{
+        width:140px; 
+        height:120px; 
+        display:block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    #btn{
+        font-size: 13px;
+    }
+}
 
 @media (max-width: 500px) {
     #head tr .title{
