--- a/static/css/pdf_page_cmi.css
+++ b/static/css/pdf_page_cmi.css
@@ -126,6 +126,34 @@ body {
 @media (max-width:400px) {
     
 } */
+@media (max-width: 800px) {
+    #head tr .title{
+        padding-left: 10px;
+        width: 85%;
+        font-weight: 600;
+        color: white;
+        font-size: 22px;
+        background-color:transparent;
+        cursor: pointer;
+    }
+    #btn{
+        font-size: 12px;
+    }
+    #tbl tbody tr td{
+        font-size: 15px;
+    }
+    #tbl tbody tr td .btn{
+        text-decoration: none;
+        color: #ffffff;
+        word-spacing: 100px;
+        padding: 2px 5px;
+        font-size: 13px;
+        border-radius: 2px;
+        font-size: 12px;
+    }
+    #tbl th:nth-of-type(1) {width:89%;}
+    #tbl th:nth-of-type(2) {width:11%;}
+}
 
 @media (max-width: 500px) {
     #head tr .title{
