--- a/static/css/projout.css
+++ b/static/css/projout.css
@@ -124,11 +124,39 @@ body {
 #tbl th:nth-of-type(3) {width:23%;}
 
 
-@media (max-width:770px) {
-}
-
-@media (max-width:400px) {
-    
+@media (max-width: 800px) {
+    #head tr .title{
+        padding-left: 20px;
+        width: 82%;
+        font-weight: 600;
+        color: white;
+        font-size: 22px;
+        background-color:transparent;
+        cursor: pointer;
+    }
+    #btn{
+        font-size: 12px;
+    }
+    #tbl tbody tr td{
+        font-size: 15px;
+    }
+    #tbl tbody tr td .btn{
+        text-decoration: none;
+        color: #ffffff;
+        word-spacing: 100px;
+        padding: 2px 5px;
+        font-size: 13px;
+        border-radius: 2px;
+        font-size: 12px;
+    }
+    #tbl thead tr th:nth-child(2){
+        display: none;
+    }
+    #tbl tbody tr td:nth-child(2){
+        display: none;
+    }
+    #tbl th:nth-of-type(1) {width:65%;}
+    #tbl th:nth-of-type(3) {width:35%;}
 }
 
 @media (max-width: 500px) {
