--- a/static/css/researcher.css
+++ b/static/css/researcher.css
@@ -125,11 +125,46 @@ body {
 #tbl th:nth-of-type(5) {width:20%;}
 
 
-@media (max-width:770px) {
-}
-
-@media (max-width:400px) {
-    
+@media (max-width: 800px) {
+    #head tr .title{
+        padding-left: 20px;
+        width: 81%;
+        font-weight: 600;
+        color: white;
+        font-size: 22px;
+        background-color:transparent;
+        cursor: pointer;
+    }
+    #btn{
+        font-size: 12px;
+    }
+    #tbl tbody tr td{
+        font-size: 15px;
+    }
+    #tbl tbody tr td .btn{
+        text-decoration: none;
+        color: #ffffff;
+        word-spacing: 100px;
+        padding: 2px 5px;
+        font-size: 13px;
+        border-radius: 2px;
+        font-size: 12px;
+    }
+    #tbl thead tr th:nth-child(3){
+        display: none;
+    }
+    #tbl tbody tr td:nth-child(3){
+        display: none;
+    }
+    #tbl thead tr th:nth-child(4){
+        display: none;
+    }
+    #tbl tbody tr td:nth-child(4){
+        display: none;
+    }
+    #tbl th:nth-of-type(1) {width:18%;}
+    #tbl th:nth-of-type(2) {width:48%;}
+    #tbl th:nth-of-type(5) {width:34%;}
 }
 
 @media (max-width: 500px) {
