--- a/static/css/secretariat.css
+++ b/static/css/secretariat.css
@@ -185,6 +185,24 @@ h2{
     font-size: 30px;
 }
 
+@media (max-width: 800px) {
+    #head tr .title{
+        padding-left: 10px;
+        width: 74%;
+        font-weight: 600;
+        color: white;
+        font-size: 22px;
+        background-color:transparent;
+        cursor: pointer;
+    }
+    #head tr .add{
+        text-align: center;
+        font-size: 10px;
+        cursor: pointer;
+    }
+
+}
+
 @media (max-width: 500px) {
     #head tr .title{
         padding-left: 10px;
