--- a/static/css/teams.css
+++ b/static/css/teams.css
@@ -174,72 +174,33 @@ body {
 }
 
 
-/* @media (max-width:770px) {
-    .wrapper{
-        padding: 0 4%;
+@media (max-width: 800px) {
+    #head tr .title{
+        padding-left: 10px;
+        width: 76%;
+        font-weight: 600;
+        color: white;
+        font-size: 22px;
+        background-color:transparent;
+        cursor: pointer;
     }
     .container{
+        margin-top: 20px;
         display: grid;
-        gap: 12px;
-        grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+        gap: 16px;
+        grid-template-columns: repeat(auto-fill, minmax(145px, 1fr));
     }
-    .box{
-        height: auto;
-        padding: 8px;
-        text-align: center;
-        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.059);
+    #btn{
+        font-size: 13px;
     }
-    .box:hover{
-        transform: scale(1);
-        box-shadow: 0 10px 15px rgba(0, 0, 0, 0.135);
+    .img_team{
+        width:150px; 
+        height:150px; 
+        display:block;
+        margin-left: auto;
+        margin-right: auto;
     }
-    .box p{
-      display: none;
-    }
-    .wrapper h1{
-        text-align: center;
-        text-decoration: none;
-        text-align: center;
-    }
-    
-    .wrapper h1 a{
-        color: #0c390a;
-        font-size: 30px;
-        text-align: center;
-        padding-bottom: 15px;
-        font-weight: 900;
-        text-decoration: none;
-        font-size:6vw
-    }
-    .box .btn{
-        border: 1px;
-        outline: none;
-        font-size: 9px;
-        margin-top: 2px;
-        padding: 2px 15px;
-        background: #e7e6e6;
-        border-radius: 5px;
-        display: inline-block;
-        text-decoration: none;
-    }
-    .box h2{
-        color: rgb(10, 60, 10);
-        padding: 5px 0;
-        font-size: 3vw;
-        font-weight: 900;
-    }
-    img{
-        width:100%; 
-        height:auto; 
-        max-width:80%;
-    }
-    .box h3{
-        color: rgb(11, 117, 11);
-        font-size: 10px;
-        padding: 2px;
-        line-height: 0.3;
-    }
-} */
+}
 
 @media (max-width: 500px) {
     #head tr .title{
