--- a/secretariat/templates/secretariat/pdf_page.html
+++ b/secretariat/templates/secretariat/pdf_page.html
@@ -20,7 +20,7 @@
 
     <table id="head">
         <tr>
-          <th class="title">SECRETARIATS</th>
+          <th class="title">SECRETARIAT</th>
           {% if user.is_authenticated %}
           <th class="main"><a href="{% url 'secretariat:secretariat' %}">Main Page</a>
           {% endif %}
