--- a/sub/templates/sub/about.html
+++ b/sub/templates/sub/about.html
@@ -30,25 +30,43 @@
         <div class="container-xxl py-5">
             <div class="container px-lg-7">
                 <div class="row justify-content-md-center">
+                    <div class="col-lg-2 py-20">
+                        <img class="img-fluid" src="{% static 'images/wesmalogo.png' %}">
+                    </div>
                     <div class="col-lg-7">
-                        <div class="section-title position-relative mb-1 pb-3">
+                        <div class="section-title position-relative mb-6 pb-1">
                             <h1 class="mb-2">WESMAARRDEC</h1>
                             <h6 class="mb-1">Western Mindanao Agriculture Aquatic and Natural Resources Research and Development Consortium</h1>
                         </div>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit clita duo justo magna dolore erat amet</p>
                     </div>
-                    <div class="col-lg-2 py-4">
-                        <img class="img-fluid" src="{% static 'images/wesmalogo.png' %}">
+                    
+                    <div class="col-lg-9">
+                        <p class="mb-4">Twenty years ago, a group of 12 government agencies in Region 9 agreed to jointly 
+                            undertake the establishment and management of the regional sectoral research and development 
+                            consortium for Western Mindanao. The group is called Western Mindanao Agriculture and Resources
+                            Research and Development Consortium (WESMAARRDEC), with the Department of Agriculture IX (DA-IX) 
+                            as the host agency from 1987-1996. On March 01, 1996, the stewardship of the consortium was 
+                            passed-on to Philippine Coconut Authority-Zamboanga Research Center (PCA-ZRC). After four years, 
+                            Western Mindanao State University (WMSU) is the one who hosted the consortium up to the present.
+                            Since its founding more than 28 years ago, WESMAARRDEC and its 23 member organizations have made 
+                            significant advancements in coordinating regional research, development, and extension activities. 
+                            These include planning, monitoring, and evaluating priority programs and related activities, 
+                            coordinating R&D initiatives, and giving Western Mindanao's AANR sectors easy access to current 
+                            technologies for increasing productivity and fostering sustainable development. In 2015, WESMARRDEC 
+                            was renamed WESMAARRDEC as the result of unification of Aquatic and Agriculture R&D Institutions 
+                            into the consortium structure.</p>
+                    
                     </div>
 
                     <div class="col-lg-9">
                         <div class="section-title position-relative mb-1 pb-1">
                             <h1 class="mb-1" id="system">The System</h1>
                         </div>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor sit. 
-                            Aliqu diam amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no 
-                            labore lorem sit clita duo justo magna dolore <a href="#">System Manual</a></p>
-                    
+                        <p class="mb-4">The CMI profiling system provides a complete picture of the CMI profiles 
+                            including their teams, commodities, programs, research projects. Each section can be 
+                            accessed and managed depending upon the classification of the user. The user classifications 
+                            are guest, admin, secretariat, researchers, stakeholders.</p>
+                            <a href="#">System Manual</a>
                     </div>
 
                 </div>
