--- a/sub/templates/sub/dashboard.html
+++ b/sub/templates/sub/dashboard.html
@@ -51,6 +51,9 @@
           
           <div class="box" id="card5">
             <h4><a href="{% url 'sub:summary' %}">CMI Summary</a></h4>
+          </div>
+
+          <div class="box" id="card6">
             <h4><a href="{% url 'sub:audit_trail' %}">Audit Trail</a></h4>
           </div>
 
@@ -63,7 +66,7 @@
               <table id="table_dashboard" class="table table-bordered">
                   <thead style="color: white; background-color: #66b366;">
                     <tr style="background-color: #339933;">
-                      <th colspan="3" style="text-align: center;">Number of Projects & Programs per CMI</th>
+                      <th colspan="3" style="text-align: center;">CMI Project and Program Count</th>
                     </tr>
                     <tr>
                       <th scope="col" style="text-align: center;">CMI</th>
