--- a/sub/templates/sub/detail_stakeholder.html
+++ b/sub/templates/sub/detail_stakeholder.html
@@ -28,9 +28,9 @@
                             <td></td>
                         </tr>
                         
-                        <tr>{% if stakeholder.cmi %}
-                            <th>CMI:</th>
-                            <td>{{stakeholder.cmi}}</td>
+                        <tr>{% if stakeholder.consortium_id %}
+                            <th>Consortium:</th>
+                            <td>{{stakeholder.consortium_id}}</td>
                             {%else%}{% endif %}
                         </tr>
 
