--- a/program/templates/program/details.html
+++ b/program/templates/program/details.html
@@ -148,7 +148,7 @@
               <table id="table_cmi" class="table table-sm">
                   <thead>
                     <tr>
-                      <th scope="col" style="background-color:#77c296;">Projects:</th>
+                      <th scope="col" style="background-color:#77c296;">Projects</th>
                     </tr>
                   </thead>
                   <tbody>
