--- a/static/css/about.css
+++ b/static/css/about.css
@@ -46,4 +46,6 @@ h1{
     font-family: Poppins;
     color: #ffffff;
     margin-bottom: -60px;
+    background-color: #800000;
+    max-width: 100%;
 }
