--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -91,13 +91,13 @@ body {
 .container{
     margin-top: 20px;
     display: grid;
-    gap: 30px;
+    gap: 10px;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
 .box{
     height: auto;
-    padding: 12px;
+    padding: 7px 0;
     text-align: center;
     background:#7abe7a;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.059);
@@ -112,7 +112,7 @@ body {
     text-decoration: none;
     color: #ffffff;
     padding: 5px 0;
-    font-size: 23px;
+    font-size: 19px;
     font-weight: 700;
     /* word-break: break-all; */
 }
@@ -131,13 +131,13 @@ body {
 
 .box h4{
     line-height: 10%;
-    margin-top: 14px;
+    margin-top: 25px;
 }
 
 .box h4 a{
     text-decoration: none;
     color: #ffffff;
-    font-size: 17px;
+    font-size: 20px;
     line-height: 0.7;
     font-weight: 700;
 }
@@ -216,10 +216,25 @@ body {
     color: #de5e57;     
 }
 
+#card6{
+    background-color: #dd82d2;  
+}
+
+#card6 h4 a:hover{
+    color: #ab3f9e;     
+}
+
 @media (max-width: 990px) {
     .box h2 a{
         font-size: 15px;
         word-break: break-all;
+    }
+    .box h4 a{
+        text-decoration: none;
+        color: #ffffff;
+        font-size: 17px;
+        line-height: 0.7;
+        font-weight: 700;
     }
 }
 
@@ -267,5 +282,16 @@ body {
         border-collapse: collapse;
         border-spacing: 0;
         box-shadow: 0 0 10px 5px rgba(36, 71, 33, 0.155);
+    }
+        .box h4{
+        line-height: 10%;
+        margin-top: 10px;
+    }
+    .box h4 a{
+        text-decoration: none;
+        color: #ffffff;
+        font-size: 15px;
+        line-height: 0.7;
+        font-weight: 700;
     }
 }
