--- a/project/templates/project/report.html
+++ b/project/templates/project/report.html
@@ -18,6 +18,16 @@
             font-size: 200%;
         }
 
+        h3{
+            font-size: 19px;
+            padding: -40px 0;
+            font-weight: 500;
+        }
+
+        label{
+            font-weight: bold;
+        }
+
     </style>
 </head>
 <body>
@@ -30,8 +40,8 @@
 
         <br>
 
-            <label></label><br>
-            {{project.title}}<br>
+            <!-- <label></label><br> -->
+            <h3>{{project.title}}</h3><br>
 
             <label>Type:</label>
             {{project.proj_type}}<br>
