--- a/secretariat/templates/secretariat/report.html
+++ b/secretariat/templates/secretariat/report.html
@@ -18,6 +18,16 @@
             font-size: 200%;
         }
 
+        h3{
+            font-size: 19px;
+            padding: -60px 0;
+            font-weight: 500;
+        }
+
+        label{
+            font-weight: bold;
+        }
+
     </style>
 </head>
 <body>
@@ -29,8 +39,8 @@
         <p>No Photo</p>
         {% endif %}
 
-        <label>Fullname:</label>
-        {{secretariat.fname}} {{secretariat.mname|default_if_none:""}} {{secretariat.lname}}<br><br>
+        <!-- <label>Fullname:</label> -->
+        <h3>{{secretariat.fname}} {{secretariat.mname|default_if_none:""}} {{secretariat.lname}}</h3><br><br>
         <label>Position:</label>
         {{secretariat.position}}<br>
         <label>Consortium:</label>
