--- a/sub/templates/sub/about.html
+++ b/sub/templates/sub/about.html
@@ -115,7 +115,7 @@
                 <div class="col-lg-2 col-md-6">
                     <div class="team-item border-top border-5 border-danger shadow overflow-hidden" style="background-color: rgb(255, 255, 255);">
                         <div class="text-center p-4">
-                            <img class="img-fluid rounded-circle mb-4" src="profile.jpg" alt="">
+                            <img class="img-fluid rounded-circle mb-4" src="{% static 'images/SI_faburada.png' %}" alt="">
                             <h6 class="fw-bold mb-1">Christelle Lei Faburada</h5>
                             <small>Lead Programmer</small>
                         </div>
