--- a/sub/templates/sub/about.html
+++ b/sub/templates/sub/about.html
@@ -66,7 +66,7 @@
                             including their teams, commodities, programs, research projects. Each section can be 
                             accessed and managed depending upon the classification of the user. The user classifications 
                             are guest, admin, secretariat, researchers, stakeholders.</p>
-                            <a href="#">System Manual</a>
+                            <a href="{% static 'images/system manual.pdf' %}" target="_blank" id="pdf">System Manual</a>
                     </div>
 
                 </div>
