--- a/static/css/about.css
+++ b/static/css/about.css
@@ -49,3 +49,11 @@ h1{
     background-color: #800000;
     max-width: 100%;
 }
+
+#pdf{
+    color: #008000;
+}
+
+#pdf:hover{
+    color: #014501;
+}
