--- a/auth_user/templates/registration/signup.html
+++ b/auth_user/templates/registration/signup.html
@@ -77,8 +77,8 @@
 
             <h6>Choose a User Type:</h6>
             <div class="checkbox">
-              <label><span>{{ form.is_superuser }} Admin &nbsp; &nbsp; &nbsp;</span>
-              </label><br>
+              <!-- <label><span>{{ form.is_superuser }} Admin &nbsp; &nbsp; &nbsp;</span>
+              </label><br> -->
               <label><span>{{ form.researcher }} Researcher &nbsp; &nbsp; &nbsp;</span>
               </label><br>
               <label><span>{{ form.secretariat }} Secretariat &nbsp; &nbsp; &nbsp;</span>
