--- a/sub/templates/sub/audit_trail.html
+++ b/sub/templates/sub/audit_trail.html
@@ -34,21 +34,21 @@
 		  <table id="tbl" class="table table-bordered">
             <thead>
 			  <tr>
-				<th scope="col">Username</th>
+				<th scope="col">Actions</th>
 			  </tr>
 			</thead>
 			{% for log in log %}
 			<tbody>
 			  <tr>
 				<td>
-                    {{log.actor.username}}
+                    <div style="font-weight: 600;">{{log.actor.username}}</div>
                 
 					{% if log.action == 1 %} updated{% endif %}
                     {% if log.action == 2 %} deleted{% endif %}
                     {% if log.action == 0 %} created{% endif %}
                 
                 
-                    {{log.object_repr}} on
+                    {{log.object_repr}} {% if log.action == 1 %}{{log.changes_str}}{% endif %} on
                 
                 
                     {{log.timestamp}}
