--- a/sub/templates/sub/audit_trail.html
+++ b/sub/templates/sub/audit_trail.html
@@ -34,7 +34,7 @@
 		  <table id="tbl" class="table table-bordered">
             <thead>
 			  <tr>
-				<th scope="col">Username</th>
+				<th scope="col">Actions</th>
 			  </tr>
 			</thead>
 			{% for log in log %}
@@ -48,7 +48,7 @@
                     {% if log.action == 0 %} created{% endif %}
                 
                 
-                    {{log.object_repr}} on
+                    {{log.object_repr}} {% if log.action == 1 %}{{log.changes_str}}{% endif %} on
                 
                 
                     {{log.timestamp}}
