--- a/team/templates/team/delete.html
+++ b/team/templates/team/delete.html
@@ -42,7 +42,7 @@
                             </tr>
     
                             <tr>
-                                <th>Team:</th>
+                                <th>Cluster/Unit:</th>
                                 <td>{{team.teams}}</td>
                             </tr>
                             <tr>
