--- a/team/templates/team/report.html
+++ b/team/templates/team/report.html
@@ -46,7 +46,7 @@
         {{team.position}}<br>
         <label>CMI:</label>
         {{team.cmi}}<br>
-        <label>Team:</label>
+        <label>Cluster/Unit:</label>
         {{team.teams}}<br>
         <label>Email Address:</label>
         {{team.email_add}}<br>
