--- a/team/templates/team/details.html
+++ b/team/templates/team/details.html
@@ -41,7 +41,7 @@
                             </tr>
     
                             <tr>
-                                <th>Team:</th>
+                                <th>Cluster/Unit:</th>
                                 <td>{{team.teams}}</td>
                             </tr>
                             <tr>
