--- a/team/templates/team/pdf_page.html
+++ b/team/templates/team/pdf_page.html
@@ -66,7 +66,7 @@
           <tr>
             <th scope="col">NAME</th>
             <th scope="col">POSITION</th>
-            <th scope="col">TEAM</th>
+            <th scope="col">CLUSTER/UNIT</th>
             <th scope="col">PDF</th>
             
           </tr>
